<resources>
    <string name="app_name">Diabezone</string>
    <string name="authorities">com.safeguardFamily.diabezone</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>

    <string name="welcome">Welcome!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_desc">Please enter your phone number. We will send you 4-digit code to verify your account.</string>
    <string name="send_code">Send Code</string>
    <string name="phone_placeholder">+91 000 000 0000</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="valid_phone">Enter a valid phone number</string>`
    <string name="verify_account">Verify Account!</string>
    <string name="otp_code_desc">Enter 4-digit code we have sent to\n <u><b>+91 %1$s</b></u>. Go back to change the phone number</string>
    <string name="didnt_received_the_code">Didn\'t receive the code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>
    <string name="accept_terms_and_privacy">By clicking proceed, you agree to our Privacy Policy our Terms and Conditions</string>
    <string name="lets_setup_your_account_in_30_seconds">Lets setup your account in 30 Seconds</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="terms_and_conditions">By creating your account you agree with to our <u>Terms and Conditions</u>.</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="valid_name">Enter a valid name</string>
    <string name="accept_terms">Accept the Terms and Conditions</string>
    <string name="valid_email">Enter valid email</string>
    <string name="home">Home</string>
    <string name="health_vault">Health Vault</string>
    <string name="appointment">Appointment</string>
    <string name="profile">Profile</string>
    <string name="daily_diabetes_log">Daily Diabetes Log</string>
    <string name="add_to_logs">Add to Logs</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="blood_sugar_value">Blood sugar value</string>
    <string name="type">Type</string>
    <string name="please_select_your_date_and_time">Please select your date and time</string>
    <string name="contact_diabezone_health_coach"><u>Contact</u> Health Coach</string>
    <string name="submit">Submit</string>

    <string name="statistics">Statistics</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="january">January</string>
    <string name="march">March</string>
    <string name="may">May</string>
    <string name="february">February</string>
    <string name="april">April</string>
    <string name="june">June</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="reschedule_an_appointment">Reschedule your appointment</string>
    <string name="confirm">Confirm</string>
    <string name="join_online">Join Online</string>
    <string name="reschedule">Reschedule</string>
    <string name="no_slots_available_in_this_date">No slots available in this date</string>
    <string name="package_valid">Package valid till %1$s - <b>Renew Now</b></string>
    <string name="chat">Chat</string>
    <string name="schedule_video_call">Schedule Video Call</string>
    <string name="date">Date</string>
    <string name="save_log">Save Log</string>
    <string name="lab_report_placeholder">Please contact your <u>health coach</u> and update your details</string>
    <string name="reset_zoom"><u>Reset Zoom</u></string>
    <string name="view_more"><u>...View More</u></string>
    <string name="view_less"><u>...View Less</u></string>

</resources>