<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mViewModel"
            type="com.safeguardFamily.diabezone.viewModel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/icHeader"
            layout="@layout/include_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcomeDesc"
            style="@style/Medium.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="5dp"
            android:padding="15dp"
            android:text="@string/lets_setup_your_account_in_30_seconds" />

        <RelativeLayout
            android:id="@+id/llProfilePickerContainer"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:padding="2dp">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/app_name"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_thumb" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:padding="7dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_circle" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_full_name"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieName"
                style="@style/Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_grey_round"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_email_address"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                style="@style/Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_grey_round"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbTermsAndCondition"
            style="@style/Medium.Grey.MontserratSemi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:buttonTint="@color/blue"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:text="@string/terms_and_conditions" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRegister"
            style="@style/Medium.White.MontserratBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_royal_blue_round"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>