<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Large.MontserratBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_select_your_date_and_time" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:timePickerMode="spinner" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectedVal"
            style="@style/Large.MontserratBold"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue"
            android:gravity="center"
            android:text="@string/please_select_your_date_and_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCancel"
                style="@style/Large.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_royal_blue_round"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btPickDate"
                style="@style/Large.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_royal_blue_round"
                android:gravity="center"
                android:text="@string/select_date"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</layout>