<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mViewModel"
            type="com.safeguardFamily.diabezone.viewModel.OtpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llWelcomeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/pvOtp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                style="@style/xxLarge.MontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcomeDesc"
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/otp_code_desc" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btProceed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pvOtp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_received_the_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResendCode"
                style="@style/xLarge.MontserratBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/resend_code" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_royal_blue_round"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvTermsPrivacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llResendCode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTermsPrivacy"
            style="@style/Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btProceed" />

        <com.safeguardFamily.diabezone.ui.pin.OtpPinView
            android:id="@+id/pvOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint=""
            app:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/llResendCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llWelcomeContainer"
            app:password="false"
            app:pinHeight="50dp"
            app:pinLength="4"
            app:pinWidth="50dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>